--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .DS_Store
 .git
 .ipynb_checkpoints/
+Book3.numbers
+bearing.key
+class.py
+cp.jpg
+kr.numbers
+new1.numbers
+SKF DATA BOOK.pdf
+Untitled.key
+Prep.ipynb
+Radial_Axial.ipynb
